--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ h4 {
 #search{
   padding-top: .5em;
   padding-bottom: .5em;
-  padding-right: 0em;
   padding-right: 70px;
   width: 86%;
   border-right-style: none;
@@ -89,7 +88,6 @@ h4 {
   border-style: inset;
   border-left-style: none;
   float: right;
-  margin-left: -70px;
   width: 15%;
   margin-left: -100px;
   padding-top: .5em;
@@ -103,10 +101,6 @@ h4 {
   background-repeat: no-repeat;
 }
 
-#btnL {
-  float: left;
-  position: relative;
-}
 
 .btn {
   width: 100%;
@@ -143,7 +137,7 @@ a:visited {
 }
 
 a:hover {
-  color: white;
+  color: #000000;
 }
 
 /* Middle content */
@@ -179,11 +173,8 @@ footer {
 /* REG FORMS PAGE LAYOUT */
 
 #regFormLeft {
-  float: left;
-  width: 49%;
+  align-items: center;
+  width: 60%;
 }
 
-#regFromRight {
- float: right;
- width: 49%;
-}
+
