--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ h4 {
   font-weight: normal;
   padding-bottom: .89em;
   color: #ff884d;
-  background-color: none;
 }
 
 #leftContent {
@@ -175,6 +174,25 @@ footer {
 #regFormLeft {
   align-items: center;
   width: 60%;
+}
+
+/* new Post */
+
+#newPost {
+  resize: none;
+  width: 80%;
+  height: 300px;
+  margin: 1em 1em 1em 1em;
+
+}
+
+#postTitle {
+  width: 250px;
+  margin: 1em 1em 1em 1em;
+}
+
+#postH4 {
+  margin: 1em 1em 0em 1em;
 }
 
 
