--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,19 @@ h4 {
 }
 
 
+#searchBar {
+  padding: 10px;
+  background: none;
+  width: 50%;
+}
+
+#searchPageBtn {
+  padding: 10px;
+  width: 10%;
+}
+
+
+
 .btn {
   width: 100%;
 
@@ -194,5 +207,83 @@ footer {
 #postH4 {
   margin: 1em 1em 0em 1em;
 }
+
+/* showPosts */
+
+#postContainer {
+  border: 1px solid gray;
+  border-radius: 5px;
+  width: 85%;
+  margin-left: 100px;
+  padding: 10px;
+}
+
+#voteContatiner {
+  margin: 1em 1em 1em 1em;
+  float: left;
+  width: 50px;
+  height: 20px;
+}
+
+#votePost {
+  font-size: 80%;
+  padding: 1em;
+}
+
+
+/* Profile Style */
+
+
+
+.crop {
+  float: left;
+  margin: 1em 1em 1em 1em;
+  width: 300px;
+  height: 193px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.crop img {
+  width: 400px;
+  height: 300px;
+  margin: -15px 0 0 -80px;
+}
+
+#pInfo {
+  margin: 1em 1em 1em 325px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+#editLink {
+
+  float: right;
+  margin: 2.5em 0em 1em 1em;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid black;
+
+}
+
+#profileInput {
+  width: 60%;
+}
+
+.profilePic{
+  width: 50%;
+}
+
+#profileForm {
+  padding-left: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+
+
+
+
+
 
 
