--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ footer {
   float: left;
   margin: 1em 1em 1em 1em;
   width: 300px;
-  height: 193px;
+  height: 200px;
   overflow: hidden;
   border-radius: 5px;
 }
@@ -264,6 +264,19 @@ footer {
   padding: 5px;
   border: 1px solid black;
 
+}
+
+#submitEdit {
+    float: right;
+    margin: 2em 0em 1em 1em;
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px solid black;
+    background-color: #ffffff;
+    font-weight: normal;
+    color: #ff884d;
+    width: 8%;
+    font-size: 100%;
 }
 
 #profileInput {
