--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ footer {
 
 }
 
-#postTitle {
+#newTitle {
     width: 250px;
     margin: 1em 1em 1em 1em;
 }
@@ -204,6 +204,40 @@ footer {
     margin: 1em 1em 0em 1em;
 }
 
+/* post feed */
+
+h5 {
+    padding-right: 0px;
+    padding-top: 0px;
+    margin: 0px;
+    font-weight: normal;
+    padding-bottom: .89em;
+    color: #ff884d;
+    float: right;
+    width: 15%;
+}
+
+#postTitle {
+    float: left;
+    padding-right: 0px;
+    padding-top: 0px;
+    margin: 0px;
+    font-weight: normal;
+    padding-bottom: 0px;
+    color: #ff884d;
+    width: 85%;
+}
+
+h6 {
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-left: 10px;
+    margin: 0em 0em 0em 2em;
+    font-weight: normal;
+    padding-bottom: 0px;
+    color: dimgray;
+
+}
 /* showPosts */
 
 #postContainer {
@@ -215,14 +249,15 @@ footer {
 }
 
 #voteContatiner {
-    margin: 1em 1em 1em 1em;
+    font-size: 70%;
+    margin: .5em .5em .5em .5em;
     float: left;
     width: 50px;
-    height: 20px;
+    height: 15px;
 }
 
 #votePost {
-    font-size: 80%;
+    font-size: 90%;
     padding: 1em;
 }
 
@@ -287,8 +322,37 @@ footer {
 }
 
 
+/* comment */
+
+#comment {
+    width: 60%;
+    height: 100px;
+    margin: 1em 1em 1em 1em;
+
+}
+#commentContainer {
+    border-radius: 5px;
+    width: 85%;
+    padding-bottom: 10px;
+    margin-left: 100px;
+}
 
 
+#commentbtn {
+    margin-left: 1em;
+    width: 60%;
+}
+
+#showCommentContainer {
+
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 85%;
+    margin: 1em 1em 1em 112px;
+    padding: 10px;
+
+
+}
 
 
 
